deploy/kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: forex
spec:
  replicas: 1
  selector:
    matchLabels: { app: forex-app }
  template:
    metadata:
      labels: { app: forex-app }
    spec:
      containers:
        - name: app
          image: muqimjon/forex:3.0.0     # ARM klaster (mas. Apple Silicon): arm64v3.0.0
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket: { port: 8080 }
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: forex
spec:
  selector: { app: forex-app }
  ports:
    - port: 8080
      targetPort: 8080
